--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
+language: node_js
+node_js:
+  - "14.16.1"
+install:
+  - npm install -g ionic
 script:
 - echo "Hello world Travis!"
+- ionic build
