adding npm install for installing node modules before hand in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 install:
   - npm install -g ionic
   - npm install -g @angular/cli
+  - npm install
 script:
 - echo "Hello world Travis!"
 - ionic build
