--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@capacitor/keyboard": "1.0.3",
     "@capacitor/status-bar": "1.0.3",
     "@capacitor/storage": "^1.1.0",
+    "@ionic-native/splash-screen": "^5.36.0",
+    "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "rxjs": "~6.6.0",
